0024213: bopargcheck complains on sphere

Added check for degenerated edges.
Test case for issue CR24213